--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img
             class="animate-up"
             id="logo"
-            src="/public/images/logo.svg"
+            src="./public/images/logo.svg"
             alt="Logomarca de Happy"
           />
 
