--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,6 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href="../src/images/logo-icon.png" />
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,700;0,800;1,600&display=swap" rel="stylesheet">
    
     <title>Happy</title>
